--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,15 @@ services:
       - 9300:9300
 
   fluentd:
-    build: ./fluentd
+    build:
+      context: fluentd/
     volumes:
       - ./fluentd/conf:/fluentd/etc
       - ./logs:/logs
     ports:
       - 8080:8080
+    depends-on:
+      - elasticsearch
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.6
@@ -22,3 +25,5 @@ services:
       ELASTICSEARCH_URL: http://elasticsearch:9200
     ports:
       - 5601:5601
+    depends-on:
+      - elasticsearch
