--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.2'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.6.0
@@ -12,8 +12,10 @@ services:
     build:
       context: fluentd/
     volumes:
-      - ./fluentd/conf:/fluentd/etc
-      - ./logs:/logs
+      - type: bind
+        source: ./fluentd/conf
+        target: /fluentd/etc
+        read_only: true
     ports:
       - 8080:8080
     depends-on:
